# gsoc-ai-choreo-test

./: .gitignore  pyproject.toml  setup.sh
notebooks/: core.ipynb
